--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/base": "^5.0.0-alpha.98",
+    "@mui/material": "^5.10.7",
     "@mui/system": "^5.10.6",
     "@react-google-maps/api": "^2.12.0",
     "@reduxjs/toolkit": "^1.8.3",
