--- a/package.json
+++ b/package.json
@@ -13,23 +13,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-  
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
     "@mui/base": "^5.0.0-alpha.98",
     "@mui/material": "^5.10.7",
     "@mui/system": "^5.10.6",
-
     "@react-google-maps/api": "^2.12.0",
     "@reduxjs/toolkit": "^1.8.3",
     "browserslist": "^4.21.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
+    "react-responsive": "^9.0.0",
     "react-router-dom": "^6.3.0",
     "redux": "^4.2.0",
     "uuid": "^8.3.2"
