--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@react-google-maps/api": "^2.12.0",
     "@reduxjs/toolkit": "^1.8.3",
     "browserslist": "^4.21.1",
+    "firebase": "^10.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-redux": "^8.0.2",
     "react-responsive": "^9.0.0",
     "react-router-dom": "^6.3.0",
@@ -38,8 +40,9 @@
     "@babel/preset-react": "^7.18.6",
     "babel-jest": "^28.1.3",
     "babel-loader": "^8.2.5",
+    "babel-plugin-root-import": "^6.6.0",
     "css-loader": "^6.7.1",
-    "dotenv-webpack": "^8.0.1",
+    "dotenv-webpack": "^8.1.0",
     "html-react-parser": "^3.0.1",
     "html-webpack-plugin": "^5.5.0",
     "style-loader": "^3.3.1",
